--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>etch a sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="flex-container">
+        
+        <div class="title">
+            <h1>Etch-a-sketch</h1>
+        </div>
+
+        <div class="content">
+            <button>Color mode</button>
+            <button>Rainbow mode</button>
+            <button>Eraser</button>
+            <button>Clear</button>
+        </div>
+
+        <div class="board"></div>
+    </div>
 </body>
-<script src="index.js">
-</script>
+<script src="index.js"></script>
+
 </html>
