Potential solution ONE

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button>Clear</button>
         </div>
 
-        <div class="board"></div>
+        <div id="board"></div>
     </div>
 </body>
 <script src="index.js"></script>
