all flex is set

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <body>
     <div class="flex-container">
 
-        <div class="title">
-            <h1>Etch-a-sketch</h1>
-        </div>
+        <div class="hero-section">
+            <div class="title">
+                <h1>Etch-a-sketch</h1>
+            </div>
 
-        <div class="content">
-            <button onClick="changeColor('black')">Black</button>
-            <button onClick="changeColor('random')">Rainbow mode</button>
-            <button onClick="changeColor('white')">Eraser</button>
-            <button onClick="clearBoard()">Clear</button>
+            <div class="content">
+                <button onClick="changeColor('black')">Black</button>
+                <button onClick="changeColor('random')">Rainbow mode</button>
+                <button onClick="changeColor('white')">Eraser</button>
+                <button onClick="clearBoard()">Clear</button>
+            </div>
         </div>
 
         <div class="board"></div>
