--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <button>Set Size</button>
         </div>
     </div>
+
+    <p class="notify">set board first :)</p>
 </body>
 <script src="index.js"></script>
 
